로그 조회에서 CRITICAL 임시 방편